Fri Feb 27 15:06:00 2004  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtkfilechooser.c (gtk_file_chooser_class_init): remove
	folder-mode property.

	* gtk/gtkfilechooserutils.c
	(_gtk_file_chooser_install_properties): remove FOLDER_MODE property.

Thu Feb 26 17:38:40 2004  Manish Singh  <yosh@gimp.org>

	* gtk/gtkcombobox.c: Add function declaration for
	gtk_combo_box_list_remove_grabs().

Fri Feb 27 02:33:21 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkentry.c (keyval_is_cursor_move): Classifiy Page Up/Down as
	cursor move, but not Home and End.

	* gtk/gtkentry.c (gtk_entry_completion_key_press): Lets Page Up/Down
	jump to the ends of the list, not Home and End - since we're not 
	scrolling yet, a "page" is always the complete list.  (#127430, Marco
	Pesenti Gritti)

Fri Feb 27 00:39:11 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcombobox.c (gtk_combo_box_list_destroy): 
	* gtk/gtkcombobox.c (gtk_combo_box_menu_destroy): Don't let
	the priv pointers dangle.  (#127623, Damon Chaplin)

Thu Feb 26 17:31:34 2004  Manish Singh  <yosh@gimp.org>

	* gdk/x11/xsettings-client.c (read_settings): fix ytpo: s/eles/else/

Thu Feb 26 19:53:32 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/xsettings-common.h (xsettings_client_process_event): 
	Add xsettings_client_set_grab_func,
	Add xsettings_client_set_ungrab_func to the list of renames.

Thu Feb 26 19:48:39 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/xsettings-client.c (read_settings): Fix memory leak
	in case of mismatched property type.

Thu Feb 26 18:25:57 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkfilechooser.h (GtkFileChooserAction): Add two more folder
	modes to the enum.

	* gtk/gtkfilechooser.c (gtk_file_chooser_set_folder_mode): Remove.
	(gtk_file_chooser_get_folder_mode): Remove

Thu Feb 26 17:29:04 2004  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkevents-x11.c (gdk_wm_protocols_filter): Return
	GDK_FILTER_CONTINUE for unhandled message types.
